src/test/ui/issues/issue-34028.stderr
error: compilation successful
  --> $DIR/issue-34028.rs:11:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

